# zenpy

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Makefile  Pipfile  README.md  TESTING.md  ci-build.sh  dev-requirements.txt  pyproject.toml  pyproject.toml.XXX  requirements.dev  requirements.txt  ruff.toml  setup.cfg  setup.py  test.py  tox.ini  travis.yml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: Makefile  api_doc_gen.py  api_object_docs.rst  api_objects.rst  conf.py  index.rst  requirements.txt  zenpy.rst
scripts/: clean_betamax.sh
specification/chat/: account.json  agent_timeline.json  billing.json  chat.json  definition.json  department.json  goal.json  offline_message.json  plan.json  response_time.json  roles.json  search_result.json  shortcut.json  visitor.json
specification/help_centre/: access_policy.json  article.json  article_attachment.json  category.json  comment.json  content_tag.json  label.json  management_permission_group.json  post.json  section.json  subscription.json  topic.json  translation.json  user_segment.json  vote.json
specification/omnichannel/: engagement.json
specification/talk/: account_overview.json  agents_activity.json  agents_overview.json  call.json  call_pe.json  current_queue_activity.json  leg.json  phone_numbers.json  (+2 more)
tests/: test_fixtures.py  test_ticket_endpoint.py  test_users_endpoint.py
tools/: doc_dict.json  doc_dict_gen.py  gen_classes.py
zenpy/: __init__.py  api.py  api_object.py  exception.py  gen_classes.py
(+584 files in other folders)
