[metadata]
description-file = README.md

[pycodestyle]
ignore=E265,E501,C901
exclude=venv,docs/conf.py

[flake8]
ignore=E265,E501,C901
exclude=venv,docs/conf.py

;docs/conf.py excluded as file that require E402 inside (import not in top file)
;Excluded errors list:
;E265 - block comment should start with '# '
;E501 - Line too long
;C901 - Too complex